Diagrama EF y clase de acceso DAPromocion

--- a/ESAN.EDU.PE.MSA/ESAN.Componentes.CoreEvaluacion/App.Config
+++ b/ESAN.EDU.PE.MSA/ESAN.Componentes.CoreEvaluacion/App.Config
@@ -1,11 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
     <add name="SisEdutiva_prodEntities" connectionString="metadata=res://*/Models.General.EvaluacionMSA.ModelMSA.csdl|res://*/Models.General.EvaluacionMSA.ModelMSA.ssdl|res://*/Models.General.EvaluacionMSA.ModelMSA.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DEVBACO;initial catalog=SisEdutiva_prod;user id=sarc;password=x87YSr!DGJX6f[wU;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="BDEvaluacionEntities" connectionString="metadata=res://*/Models.General.EvaluacionMSA.General.csdl|res://*/Models.General.EvaluacionMSA.General.ssdl|res://*/Models.General.EvaluacionMSA.General.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LENOVO;initial catalog=BDEvaluacion;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
