--- a/ESAN.EDU.PE.MSA/ESANMSA/Web.config
+++ b/ESAN.EDU.PE.MSA/ESANMSA/Web.config
@@ -4,29 +4,57 @@
   http://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
+  <configSections>
+    <sectionGroup name="customEmailConfig">
+      <section name="ProduccionCompromisoAlumno" type="ESAN.Componentes.CoreEvaluacion.Email.Configuration.DefaultConfigData, ESAN.Componentes.CoreEvaluacion" allowLocation="true" allowDefinition="Everywhere"/>
+    </sectionGroup>
+  </configSections>
+  <customEmailConfig>
+
+
+
+    <ProduccionCompromisoAlumno
+      type="ESAN.Componentes.CoreEvaluacion.Email.DefaultProvider, ESAN.Componentes.CoreEvaluacion"
+      fromAddress="no-reply@esan.edu.pe"
+      subject="Aviso de evaluación MSA"
+      enviarCorreo="true"
+      toAddress=""
+      bccAddress="ibardalez@esan.edu.pe,lchang@esan.edu.pe,lsalvatierra@esan.edu.pe"/>
+
+  </customEmailConfig>
   <appSettings>
-    <add key="webpages:Version" value="3.0.0.0"/>
-    <add key="webpages:Enabled" value="false"/>
-    <add key="ClientValidationEnabled" value="true"/>
-    <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
+    <add key="webpages:Version" value="3.0.0.0" />
+    <add key="webpages:Enabled" value="false" />
+    <add key="ClientValidationEnabled" value="true" />
+    <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="EnvioMailCompromisoAlumno" value="ProduccionCompromisoAlumno"/>
+    <add key="IdTipoDocumentoDefault" value="4" />
+    <add key="IdTipoRelacionOtro" value="4"/>
+
+
   </appSettings>
+  <connectionStrings>
+    <add name="SisEdutiva_prodEntities" connectionString="metadata=res://*/Models.General.EvaluacionMSA.ModelMSA.csdl|res://*/Models.General.EvaluacionMSA.ModelMSA.ssdl|res://*/Models.General.EvaluacionMSA.ModelMSA.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DEVBACO;initial catalog=SisEdutiva_prod;user id=sarc;password=x87YSr!DGJX6f[wU;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="BDEvaluacionEntities" connectionString="metadata=res://*/Models.General.EvaluacionMSA.General.csdl|res://*/Models.General.EvaluacionMSA.General.ssdl|res://*/Models.General.EvaluacionMSA.General.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LENOVO;initial catalog=BDEvaluacion;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
   <system.web>
-    <compilation debug="true" targetFramework="4.5"/>
-    <httpRuntime targetFramework="4.5"/>
+    <compilation debug="true" targetFramework="4.5" />
+    <httpRuntime targetFramework="4.5" />
+
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="System.Web.Helpers" publicKeyToken="31bf3856ad364e35"/>
-        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0"/>
+        <assemblyIdentity name="System.Web.Helpers" publicKeyToken="31bf3856ad364e35" />
+        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35"/>
-        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0"/>
+        <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
+        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35"/>
-        <bindingRedirect oldVersion="1.0.0.0-5.2.3.0" newVersion="5.2.3.0"/>
+        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
