--- a/ESAN.EDU.PE.MSA/ESAN.Componentes.CoreEvaluacion/ESAN.Componentes.CoreEvaluacion.csproj
+++ b/ESAN.EDU.PE.MSA/ESAN.Componentes.CoreEvaluacion/ESAN.Componentes.CoreEvaluacion.csproj
@@ -40,6 +40,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Security" />
@@ -50,7 +51,28 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Email\Configuration\DefaultConfigData.cs" />
+    <Compile Include="Email\Configuration\GMailConfigData.cs" />
+    <Compile Include="Email\DefaultProvider.cs" />
+    <Compile Include="Email\EmailFactory.cs" />
+    <Compile Include="Email\EmailProvider.cs" />
+    <Compile Include="Email\GMailProvider.cs" />
+    <Compile Include="Email\TipoDirecciones.cs" />
+    <Compile Include="Logic\Facade\EvaluacionMSA\DACiclo.cs" />
+    <Compile Include="Logic\Facade\EvaluacionMSA\DAEvaluacion.cs" />
+    <Compile Include="Logic\Facade\EvaluacionMSA\DAEvaluacionAlternativa.cs" />
+    <Compile Include="Logic\Facade\EvaluacionMSA\DAEvaluacionNivel.cs" />
+    <Compile Include="Logic\Facade\EvaluacionMSA\DAEvaluacionNivelIntro.cs" />
+    <Compile Include="Logic\Facade\EvaluacionMSA\DAEvaluacionPregunta.cs" />
+    <Compile Include="Logic\Facade\EvaluacionMSA\DAEvaluacionRespuesta.cs" />
+    <Compile Include="Logic\Facade\EvaluacionMSA\DAEvaluacionUsuario.cs" />
+    <Compile Include="Logic\Facade\EvaluacionMSA\DAParticipante.cs" />
     <Compile Include="Logic\Facade\EvaluacionMSA\DAPromocion.cs" />
+    <Compile Include="Logic\Facade\EvaluacionMSA\DAPromocionCiclo.cs" />
+    <Compile Include="Logic\Facade\EvaluacionMSA\DAPromocionMedicion.cs" />
+    <Compile Include="Logic\Facade\EvaluacionMSA\DAPromocionMedicionCicloParticipante.cs" />
+    <Compile Include="Logic\Facade\EvaluacionMSA\DATipoDocumento.cs" />
+    <Compile Include="Logic\Facade\EvaluacionMSA\DATipoRelacionParticipante.cs" />
     <Compile Include="Models\General\EvaluacionMSA\Evaluacion.cs">
       <DependentUpon>General.tt</DependentUpon>
     </Compile>
@@ -64,6 +86,9 @@
       <DependentUpon>General.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\General\EvaluacionMSA\EvaluacionNivel.cs">
+      <DependentUpon>General.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\General\EvaluacionMSA\EvaluacionNivelIntro.cs">
       <DependentUpon>General.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\General\EvaluacionMSA\EvaluacionParticipante.cs">
@@ -81,7 +106,13 @@
     <Compile Include="Models\General\EvaluacionMSA\EvaluacionPromocionMedicion.cs">
       <DependentUpon>General.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\General\EvaluacionMSA\EvaluacionPromocionParticipante.cs">
+      <DependentUpon>General.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\General\EvaluacionMSA\EvaluacionRespuesta.cs">
+      <DependentUpon>General.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\General\EvaluacionMSA\EvaluacionUsuario.cs">
       <DependentUpon>General.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\General\EvaluacionMSA\General.Context.cs">
@@ -117,10 +148,19 @@
     <Compile Include="Models\General\EvaluacionMSA\Participante.cs">
       <DependentUpon>General.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\General\EvaluacionMSA\sysdiagrams.cs">
+    <Compile Include="Models\General\EvaluacionMSA\PromedioEvaluacionxCicloNivel_Result.cs">
+      <DependentUpon>General.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\General\EvaluacionMSA\PromocionMedicionCicloParticipante.cs">
+      <DependentUpon>General.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\General\EvaluacionMSA\sp_PromedioEvaluacion_Result.cs">
       <DependentUpon>General.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\General\EvaluacionMSA\TipoDocumento.cs">
+      <DependentUpon>General.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\General\EvaluacionMSA\TipoRelacionParticipante.cs">
       <DependentUpon>General.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
