--- a/ESAN.EDU.PE.MSA/ESANMSA/ESANMSA.csproj
+++ b/ESAN.EDU.PE.MSA/ESANMSA/ESANMSA.csproj
@@ -39,7 +39,27 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Microsoft.Web.Infrastructure, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>bin\Microsoft.Web.Infrastructure.dll</HintPath>
+    </Reference>
+    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Rotativa, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\Rotativa.1.6.4\lib\net40\Rotativa.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -82,11 +102,13 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.Web.Infrastructure">
-      <HintPath>..\packages\Microsoft.Web.Infrastructure.1.0.0.0\lib\net40\Microsoft.Web.Infrastructure.dll</HintPath>
-    </Reference>
-  </ItemGroup>
-  <ItemGroup>
+    <Content Include="Areas\Administrador\Views\Link\Email.cshtml" />
+    <Content Include="Areas\Administrador\Views\Link\Index.cshtml" />
+    <Content Include="Areas\Administrador\Views\Link\ListadoParticipante.cshtml" />
+    <Content Include="Areas\Administrador\Views\Link\ListadoParticipanteDetalle.cshtml" />
+    <Content Include="Areas\Administrador\Views\Link\ListadoPromocion.cshtml" />
+    <Content Include="Content\bootstrap.css" />
+    <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\bootstrap\bootstrap-theme.css" />
     <Content Include="Content\bootstrap\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap\bootstrap.css" />
@@ -100,6 +122,7 @@
     <Content Include="Content\images\imglogin.png" />
     <Content Include="Content\images\login.jpg" />
     <Content Include="Content\images\logo-transparente.png" />
+    <Content Include="Content\images\LOGO_ESAN_POSGRADO.png" />
     <Content Include="Content\images\top_arr.png" />
     <Content Include="Content\images\top_arr_picki.png" />
     <Content Include="Content\jquery\jquery.timepicker.css" />
@@ -170,6 +193,10 @@
     <Content Include="Content\timepicki\timepicki.css" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
+    <Content Include="Scripts\Areas\Administrador\Promocion.js" />
+    <Content Include="Scripts\Areas\Administrador\ResultadoEvaluacion\frmPromociones.js" />
+    <Content Include="Scripts\Areas\Administrador\ResultadoEvaluacion\ResultadoParticipante.js" />
+    <Content Include="Scripts\Areas\Alumno\Registro\Index.js" />
     <Content Include="Scripts\bootstrap\bootstrap-loading.js" />
     <Content Include="Scripts\bootstrap\bootstrap.js" />
     <Content Include="Scripts\bootstrap\bootstrap.min.js" />
@@ -189,7 +216,74 @@
     <Content Include="Areas\Seguridad\Views\_ViewStart.cshtml" />
     <Content Include="Areas\Seguridad\Views\Principal\Index.cshtml" />
     <Content Include="Areas\Alumno\Views\web.config" />
+    <Content Include="Areas\Administrador\Views\Promocion\FormPromocion.cshtml" />
+    <Content Include="Areas\Administrador\Views\Promocion\Index.cshtml" />
+    <Content Include="Areas\Administrador\Views\Promocion\ListadoMedicion.cshtml" />
+    <Content Include="Areas\Administrador\Views\Promocion\ListadoPromocion.cshtml" />
+    <Content Include="Areas\Administrador\Views\ResultadoEvaluacion\ExportarPDF.cshtml" />
+    <Content Include="Areas\Administrador\Views\ResultadoEvaluacion\frmPromociones.cshtml" />
+    <Content Include="Areas\Administrador\Views\ResultadoEvaluacion\ResultadoParticipante.cshtml" />
+    <Content Include="Areas\Administrador\Views\ResultadoEvaluacion\_ListaParticipantes.cshtml" />
+    <Content Include="Areas\Administrador\Views\ResultadoEvaluacion\_PartialParticipantes.cshtml" />
+    <Content Include="Areas\Administrador\Views\_ViewStart.cshtml" />
+    <Content Include="Areas\Alumno\Views\Registro\Formulario.cshtml" />
+    <Content Include="Areas\Alumno\Views\Registro\FormularioError.cshtml" />
+    <Content Include="Areas\Alumno\Views\Registro\Index.cshtml" />
+    <Content Include="Areas\Alumno\Views\_ViewStart.cshtml" />
+    <Content Include="Areas\Alumno\Views\Shared\_LayoutAlumno.cshtml" />
+    <Content Include="Areas\Alumno\Views\Evaluacion\frmEvaluacion.cshtml" />
+    <Content Include="Areas\Alumno\Views\Evaluacion\Index.cshtml" />
+    <Content Include="Areas\Alumno\Views\Evaluacion\_PartialAlternativas.cshtml" />
+    <Content Include="Areas\Alumno\Views\Evaluacion\_PartialAnteriorPaginaEval.cshtml" />
+    <Content Include="Areas\Alumno\Views\Evaluacion\_PartialFinEvaluacion.cshtml" />
+    <Content Include="Areas\Alumno\Views\Evaluacion\_PartialPorcentajeAvance.cshtml" />
+    <Content Include="Areas\Alumno\Views\Evaluacion\_PartialSiguientePaginaEval.cshtml" />
+    <Content Include="App_Browsers\qt.browser" />
+    <Content Include="Areas\Seguridad\Views\Acceso\Login.cshtml" />
+    <Content Include="Areas\Administrador\Views\Link\EmailExterno.cshtml" />
+    <None Include="Properties\PublishProfiles\PerfilMSA.pubxml" />
+    <Content Include="Scripts\Datatable\images\Sorting icons.psd" />
     <None Include="Scripts\jquery\jquery-1.9.1.intellisense.js" />
+    <Content Include="Scripts\Datatable\css\dataTables.bootstrap.css" />
+    <Content Include="Scripts\Datatable\css\dataTables.bootstrap.min.css" />
+    <Content Include="Scripts\Datatable\css\dataTables.bootstrap4.css" />
+    <Content Include="Scripts\Datatable\css\dataTables.bootstrap4.min.css" />
+    <Content Include="Scripts\Datatable\css\dataTables.foundation.css" />
+    <Content Include="Scripts\Datatable\css\dataTables.foundation.min.css" />
+    <Content Include="Scripts\Datatable\css\dataTables.jqueryui.css" />
+    <Content Include="Scripts\Datatable\css\dataTables.jqueryui.min.css" />
+    <Content Include="Scripts\Datatable\css\dataTables.material.css" />
+    <Content Include="Scripts\Datatable\css\dataTables.material.min.css" />
+    <Content Include="Scripts\Datatable\css\dataTables.semanticui.css" />
+    <Content Include="Scripts\Datatable\css\dataTables.semanticui.min.css" />
+    <Content Include="Scripts\Datatable\css\dataTables.uikit.css" />
+    <Content Include="Scripts\Datatable\css\dataTables.uikit.min.css" />
+    <Content Include="Scripts\Datatable\css\jquery.dataTables.css" />
+    <Content Include="Scripts\Datatable\css\jquery.dataTables.min.css" />
+    <Content Include="Scripts\Datatable\css\jquery.dataTables_themeroller.css" />
+    <Content Include="Scripts\Datatable\images\favicon.ico" />
+    <Content Include="Scripts\Datatable\images\sort_asc.png" />
+    <Content Include="Scripts\Datatable\images\sort_asc_disabled.png" />
+    <Content Include="Scripts\Datatable\images\sort_both.png" />
+    <Content Include="Scripts\Datatable\images\sort_desc.png" />
+    <Content Include="Scripts\Datatable\images\sort_desc_disabled.png" />
+    <Content Include="Scripts\Datatable\js\dataTables.bootstrap.js" />
+    <Content Include="Scripts\Datatable\js\dataTables.bootstrap.min.js" />
+    <Content Include="Scripts\Datatable\js\dataTables.bootstrap4.js" />
+    <Content Include="Scripts\Datatable\js\dataTables.bootstrap4.min.js" />
+    <Content Include="Scripts\Datatable\js\dataTables.foundation.js" />
+    <Content Include="Scripts\Datatable\js\dataTables.foundation.min.js" />
+    <Content Include="Scripts\Datatable\js\dataTables.jqueryui.js" />
+    <Content Include="Scripts\Datatable\js\dataTables.jqueryui.min.js" />
+    <Content Include="Scripts\Datatable\js\dataTables.material.js" />
+    <Content Include="Scripts\Datatable\js\dataTables.material.min.js" />
+    <Content Include="Scripts\Datatable\js\dataTables.semanticui.js" />
+    <Content Include="Scripts\Datatable\js\dataTables.semanticui.min.js" />
+    <Content Include="Scripts\Datatable\js\dataTables.uikit.js" />
+    <Content Include="Scripts\Datatable\js\dataTables.uikit.min.js" />
+    <Content Include="Scripts\Datatable\js\jquery.dataTables.js" />
+    <Content Include="Scripts\Datatable\js\jquery.dataTables.min.js" />
+    <Content Include="Scripts\Datatable\js\jquery.js" />
     <Content Include="Scripts\jquery\jquery-1.9.1.js" />
     <Content Include="Scripts\jquery\jquery-1.9.1.min.js" />
     <Content Include="Scripts\jquery\jquery-migrate-1.4.1.js" />
@@ -228,14 +322,21 @@
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Areas\Administrador\AdministradorAreaRegistration.cs" />
+    <Compile Include="Areas\Administrador\Controllers\LinkController.cs" />
+    <Compile Include="Areas\Administrador\Controllers\PromocionController.cs" />
+    <Compile Include="Areas\Administrador\Controllers\ResultadoEvaluacionController.cs" />
     <Compile Include="Areas\Alumno\AlumnoAreaRegistration.cs" />
     <Compile Include="Areas\Alumno\Controllers\EvaluacionController.cs" />
+    <Compile Include="Areas\Alumno\Controllers\RegistroController.cs" />
+    <Compile Include="Areas\Seguridad\Controllers\AccesoController.cs" />
     <Compile Include="Areas\Seguridad\Controllers\PrincipalController.cs" />
     <Compile Include="Areas\Seguridad\SeguridadAreaRegistration.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utilitarios\General.cs" />
+    <Compile Include="Utilitarios\NoCache.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config" />
@@ -303,17 +404,13 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Areas\Administrador\Controllers\" />
     <Folder Include="Areas\Administrador\Models\" />
     <Folder Include="Areas\Administrador\Views\Shared\" />
     <Folder Include="Areas\Alumno\Models\" />
-    <Folder Include="Areas\Alumno\Views\Evaluacion\" />
-    <Folder Include="Areas\Alumno\Views\Shared\" />
     <Folder Include="Areas\Seguridad\Models\" />
     <Folder Include="Areas\Seguridad\Views\Shared\" />
     <Folder Include="Controllers\" />
     <Folder Include="Models\" />
-    <Folder Include="Scripts\Areas\Administrador\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ESAN.Componentes.CoreEvaluacion\ESAN.Componentes.CoreEvaluacion.csproj">
