--- a/ESAN.EDU.PE.MSA/ESANMSA/Web.config
+++ b/ESAN.EDU.PE.MSA/ESANMSA/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=301880
@@ -6,51 +6,65 @@
 <configuration>
   <configSections>
     <sectionGroup name="customEmailConfig">
-      <section name="ProduccionCompromisoAlumno" type="ESAN.Componentes.CoreEvaluacion.Email.Configuration.DefaultConfigData, ESAN.Componentes.CoreEvaluacion" allowLocation="true" allowDefinition="Everywhere" />
+      <section name="ProduccionCompromisoAlumno" type="ESAN.Componentes.CoreEvaluacion.Email.Configuration.DefaultConfigData, ESAN.Componentes.CoreEvaluacion" allowLocation="true" allowDefinition="Everywhere"/>
     </sectionGroup>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
   </configSections>
   <customEmailConfig>
-    <ProduccionCompromisoAlumno type="ESAN.Componentes.CoreEvaluacion.Email.DefaultProvider, ESAN.Componentes.CoreEvaluacion" fromAddress="no-reply@esan.edu.pe" subject="Aviso de evaluación MSA" enviarCorreo="true" toAddress="" bccAddress="ibardalez@esan.edu.pe,lchang@esan.edu.pe,lsalvatierra@esan.edu.pe" />
+    <ProduccionCompromisoAlumno type="ESAN.Componentes.CoreEvaluacion.Email.DefaultProvider, ESAN.Componentes.CoreEvaluacion" fromAddress="no-reply@esan.edu.pe" subject="Aviso de evaluación MSA" enviarCorreo="true" toAddress="" bccAddress="ibardalez@esan.edu.pe,lchang@esan.edu.pe,lsalvatierra@esan.edu.pe"/>
   </customEmailConfig>
   <appSettings>
-    <add key="webpages:Version" value="3.0.0.0" />
-    <add key="webpages:Enabled" value="false" />
-    <add key="ClientValidationEnabled" value="true" />
-    <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="EnvioMailCompromisoAlumno" value="ProduccionCompromisoAlumno" />
-    <add key="IdTipoDocumentoDefault" value="4" />
-    <add key="IdTipoRelacionOtro" value="4" />
-    <add key="IdTipoRelacionComClase" value="3" />
+    <add key="webpages:Version" value="3.0.0.0"/>
+    <add key="webpages:Enabled" value="false"/>
+    <add key="ClientValidationEnabled" value="true"/>
+    <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
+    <add key="EnvioMailCompromisoAlumno" value="ProduccionCompromisoAlumno"/>
+    <add key="IdTipoDocumentoDefault" value="4"/>
+    <add key="IdTipoRelacionOtro" value="4"/>
+    <add key="IdTipoRelacionComClase" value="3"/>
     <!--Id de Nivel a excluir-->
-    <add key="IdNivelePadreExcluir" value="2" />
+    <add key="IdNivelePadreExcluir" value="2"/>
     <!--Id de Nivel a excluir preguntas-->
-    <add key="IdNivelesPreguntasExcluir" value="10-11-12-13-14" />
+    <add key="IdNivelesPreguntasExcluir" value="10-11-12-13-14"/>
+    <!--Si se encuentra en un ambiente de pruebas: 1=Si-0=NO-->
+    <add key="EsPrueba" value="0"/>
+    <add key="CorreoPrueba" value="1302177@esan.edu.pe"/>
+    <!--Dominio en el que se enviaran los correos, siempre y cuando la Key EsPrueba = 0 -->
+    <add key="DominioCorreoEnvio" value="@esan.edu.pe"/>
   </appSettings>
   <connectionStrings>
-    <add name="SisEdutiva_prodEntities" connectionString="metadata=res://*/Models.General.EvaluacionMSA.ModelMSA.csdl|res://*/Models.General.EvaluacionMSA.ModelMSA.ssdl|res://*/Models.General.EvaluacionMSA.ModelMSA.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DEVBACO;initial catalog=SisEdutiva_prod;user id=sarc;password=x87YSr!DGJX6f[wU;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="BDEvaluacionEntities" connectionString="metadata=res://*/Models.General.EvaluacionMSA.General.csdl|res://*/Models.General.EvaluacionMSA.General.ssdl|res://*/Models.General.EvaluacionMSA.General.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=172.25.0.92;initial catalog=BDEvaluacion;user id=app_dbevaluaciones;password=R4vKak6QpC;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="SisEdutiva_prodEntities" connectionString="metadata=res://*/Models.General.EvaluacionMSA.ModelMSA.csdl|res://*/Models.General.EvaluacionMSA.ModelMSA.ssdl|res://*/Models.General.EvaluacionMSA.ModelMSA.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DEVBACO;initial catalog=SisEdutiva_prod;user id=sarc;password=x87YSr!DGJX6f[wU;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
+    <add name="BDEvaluacionEntities" connectionString="metadata=res://*/Models.General.EvaluacionMSA.General.csdl|res://*/Models.General.EvaluacionMSA.General.ssdl|res://*/Models.General.EvaluacionMSA.General.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=172.25.0.92;initial catalog=BDEvaluacion;user id=app_dbevaluaciones;password=R4vKak6QpC;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
     <!--<add name="BDEvaluacionEntities" connectionString="metadata=res://*/Models.General.EvaluacionMSA.General.csdl|res://*/Models.General.EvaluacionMSA.General.ssdl|res://*/Models.General.EvaluacionMSA.General.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=BDEvaluacion;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
   </connectionStrings>
   <system.web>
-    <compilation debug="true" targetFramework="4.5" />
-    <httpRuntime targetFramework="4.5" />
-  <sessionState  mode="InProc" timeout="100" />
+    <globalization culture="es-PE" uiCulture="es-PE"/>
+    <!--<customErrors mode="Off"/>-->
+    <compilation targetFramework="4.5" debug="true"/>
+    <httpRuntime targetFramework="4.5"/>
+    <sessionState mode="InProc" timeout="100"/>
   </system.web>
+  <system.net>
+    <mailSettings>
+      <smtp>
+        <network host="172.25.0.42" port="25"/>
+      </smtp>
+    </mailSettings>
+  </system.net>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="System.Web.Helpers" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+        <assemblyIdentity name="System.Web.Helpers" publicKeyToken="31bf3856ad364e35"/>
+        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+        <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35"/>
+        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
+        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35"/>
+        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0"/>
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
@@ -61,7 +75,7 @@
       </parameters>-->
     </defaultConnectionFactory>
     <providers>
-      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
     </providers>
   </entityFramework>
 </configuration>
